[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lltk-dh"
version = "0.7.0"
description = "Literary Language Toolkit (LLTK): corpora, models, and tools for the digital humanities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Ryan Heuser", email = "rj416@cam.ac.uk"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/quadrismegistus/lltk"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["lltk*"]

[tool.setuptools]
include-package-data = true
script-files = ["bin/lltk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
